# document-moderation-service

./: .coverage  .env.template  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
config/: celery.py  settings.py  settings_test.py  urls.py
documents/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
documents/migrations/: 0001_initial.py
documents/tests/: test_admin_actions.py  test_file_delete.py  test_upload.py  test_upload_success.py
